# data-juicer-agents

./: .gitignore  README.md  README_ZH.md  index.html  pyproject.toml
data_juicer_agents/: __init__.py  cli.py
data_juicer_agents/agents/: __init__.py  executor_agent.py  planner_agent.py  react_planner_agent.py  validator_agent.py
data_juicer_agents/commands/: __init__.py  apply_cmd.py  evaluate_cmd.py  plan_cmd.py  trace_cmd.py
data_juicer_agents/core/: __init__.py  _version.py  dj_agent_hooks.py  prompts.py  schemas.py
docs/: CLI_Reference_v0.1_ZH.md  QuickStart_v0.1_ZH.md  Recipe_Iteration_Demo_v0.1.ipynb  Schema_v0.1_ZH.md  overview.md  tools.md  tools_ZH.md
en/main/: .buildinfo  (+9 more)
interactive_recipe/: README.md  README_ZH.md  copilot_client.py  pyproject.toml  requirements.txt  st_operator_pool.py
interactive_recipe/qa-copilot/: README.md  README_ZH.md  agent_helper.py  agent_run.py  app_deploy.py  prompts.py  pyproject.toml
interactive_recipe/qa-copilot/op_manager/: dj_op_retriever.py  retrieve_ops.py
interactive_recipe/save/: op_pool_state.yaml
interactive_recipe/utils/: recipe_utils.py
qa-copilot/: agent_helper.py  app_deploy.py  prompts.py
tests/: test_apply_execution.py  test_cli_validation.py  test_evaluate_advanced.py  test_evaluate_command.py  test_evaluate_llm_full.py  test_executor_timeout.py  test_llm_utils.py  test_operator_registry.py  test_plan_command.py  test_plan_full_llm.py  test_plan_revision.py  test_plan_schema.py  test_react_planner_logging.py  test_retrieval_service.py  test_trace_replay.py  test_workflow_routing.py
(+1424 files in other folders)
