[project]
name = "qa-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["py-data-juicer>=1.4.0"]

[project.optional-dependencies]
qa = [
    "agentscope>=1.0.7",
    "agentscope-runtime>=1.0.0",
    "jinja2>=3.1.6",
    "langchain-community",
    "psutil>=7.1.3",
    "huggingface-hub<1.0",
    "faiss-cpu>=1.13.1",
    "hf-transfer>=0.1.9",
    "transformers>=4.57.3",
]
recipe = ["loguru", "streamlit", "dashscope", "oyaml", "openai"]
all = [
    "agentscope>=1.0.7",
    "agentscope-runtime>=1.0.0",
    "jinja2>=3.1.6",
    "langchain-community",
    "psutil>=7.1.3",
    "huggingface-hub<1.0",
    "faiss-cpu>=1.13.1",
    "hf-transfer>=0.1.9",
    "transformers>=4.57.3",
    "loguru",
    "streamlit",
    "dashscope",
    "oyaml",
    "openai"
]

[tool.setuptools]
packages = ["qa-copilot", "qa-copilot.op_manager"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
