[project]
name = "qa-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentscope>=1.0.7",
    "agentscope-runtime>=0.2.0",
    "jinja2>=3.1.6",
    "psutil>=7.1.3"
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
